# Aminonaut

./: .gitignore  CITATION.cff  README.md  count_peptides.py  find_nullomer_motifs.py  find_nullomer_motifs_forward_and_backwards.py  find_peptide_motifs.py  nullomer_codon_counter.py  pyproject.toml
