[build-system]
requires = ["setuptools>=61.0.0"", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name =  "aminonaut"
authors = [
    {name = "Steven Shave"},
]
description = "Software to identify and analyse nullomer peptides from UniProt (Swiss-Prot) XML data"
readme = "README.md"
license = "MIT"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
]
keywords = ["Nullomers","NulloPs","Nullomer peptides"]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.15.0",
    ]

[tool.black]
skip-string-normalization = true
experimental-string-processing = true
include = '''
(
    ^/tests/
  | ^/src/
  | ^/setup[.]py
)
'''
exclude = '''
(
    __pycache__
    |.*\.egg-info
)
'''

[project.scripts]
fepops = "fepops.__main__:fepops_entrypoint"

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
"Homepage" = "https://github.com/JustinYKC/FEPOPS"

[project.optional-dependencies]
dev = [
    'black==23.10.1',
]

[tool.pytest.ini_options]
"testpaths" = "tests/test*"